# lieutenant

./: Cargo.toml  README.md  temp
host-dispatcher/: Cargo.toml
host-dispatcher/src/: command.rs  dispatcher.rs
lieutenant-host-dispatcher/: Cargo.toml
lieutenant-parser/: Cargo.toml
lieutenant_host_dispatcher/: Cargo.toml
lieutenant_host_dispatcher/src/: lib.rs
lieutenant_host_dispatcher/src/automata/: nfa.rs
lieutenant_host_dispatcher/src/automata/nfa_ops/: literal.rs  mod.rs  tab_complete.rs
lieutenant_host_dispatcher/src/automata/quickcheck/: mod.rs  regex.rs
lieutenant_host_dispatcher/src/automata/regex/: mod.rs  regex_to_nfa.rs
lieutenant_parser/: Cargo.toml
lieutenant_parser/src/: argument.rs  builder.rs  lib.rs
parser/: Cargo.toml  README.md
parser/src/: impl_macro.rs
parser/tests/: test.rs
src/: dispatcher.rs  generic.rs  lib.rs  nfa.rs  values.rs
src/argument/: mod.rs  numbers.rs
src/automaton/: converter.rs  dfa.rs  mod.rs  nfa.rs  nfa_to_dfa.rs  pattern.rs  regex_to_nfa.rs
src/command/: and.rs  argument.rs  builder.rs  command.rs  dispatcher.rs  literal.rs  map.rs  mod.rs  optargument.rs  repeat.rs  space.rs
src/command_tree/: command.rs  tree.rs  validator.rs
src/dfa/: mod.rs
src/examples/: number.rs
src/graph/: mod.rs  parser_kind.rs
src/parser/: and.rs  evaluator.rs  literal.rs  map.rs  mod.rs  nfa_builder.rs  optional.rs  parser.rs  space.rs
src/parsers/: and.rs  argument.rs  literal.rs  mod.rs  repeat.rs  space.rs
src/regex/: byteclass.rs  dfa.rs  mod.rs  (+8 more)
tests/: commands.json  commands.rs  positive.txt
(+16 files in other folders)
