[package]
name = "lieutenant"
version = "0.1.0"
authors = ["caelunshun <caelunshun@gmail.com>"]
edition = "2018"

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
unicase = "2.6"
slab = "0.4"
indexmap = "1.6"
lazy_static = "1.4"

[dev-dependencies]
criterion = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[workspace]
members = [".", "macros"]

[[bench]]
name = "simple"
harness = false